# Interpolation

./: CMakeLists.txt  README.md
FirstTaskFiles/: test_second.txt
SecondTaskFiles/: conditions.txt  dots.txt
src/: CMakeLists.txt  a.txt  main.cpp
src/FirstTask/Solver/: iInterpolation.h  interpolation.h  interpolation_impl.h
src/FirstTask/Solver/Linear/: linear_interpolation.h  linear_interpolation_impl.h
src/FirstTask/Solver/Quadratic/: quadratic_interpolation.h  quadratic_interpolation_impl.h
src/FirstTask/Solver/Qubic/: qubic_interpolation.h  qubic_interpolation_impl.h
src/FirstTask/TaskManger/: task_manager.h  task_manager_impl.h
src/MainManager/: main_manager.h  main_manager_impl.h
src/SecondTask/GlobalPosSolver/: global_pos_solver.h  global_pos_solver_impl.h
src/SecondTask/LocalPosSolver/: local_pos_solver.h  local_pos_solver_impl.h
src/SecondTask/SecTaskManager/: second_task_manager.h  second_task_manager_impl.h
src/Solver/: iInterpolation.h  interpolation.h  interpolation_impl.h
src/Solver/Linear/: linear_interpolation.h  linear_interpolation_impl.h
src/Solver/Quadratic/: quadratic_interpolation.h  quadratic_interpolation_impl.h
src/Solver/Qubic/: qubic_interpolation.h  qubic_interpolation_impl.h
src/TaskManger/: task_manager.h  task_manager_impl.h
